--- a/API/docker-compose.yml
+++ b/API/docker-compose.yml
@@ -1,15 +1,14 @@
 version: '3.8'
 services:
   db:
-    image: postgres:16-alpine
+    image: mcr.microsoft.com/mssql/server:2022-latest
     restart: always
     environment:
-      POSTGRES_USER: postgres       
-      POSTGRES_PASSWORD: postgres   
-      POSTGRES_DB: postgres       
+      ACCEPT_EULA: "Y"
+      SA_PASSWORD: "hp&=sG1O88!D"
     ports:
-      - "5432:5432"
+      - "1433:1433"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - sqlserver_data:/var/opt/mssql
 volumes:
-  postgres_data:
+  sqlserver_data:
